testdata/baselines/reference/submodule/conformance/override_js3.errors.txt
a.js(6,17): error TS8010: Type annotations can only be used in TypeScript files.
a.js(7,5): error TS8009: The 'override' modifier can only be used in TypeScript files.


==== a.js (2 errors) ====
    class B {
        foo (v) {}
        fooo (v) {}
    }
    
    class D extends B {
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        override foo (v) {}
        ~~~~~~~~
!!! error TS8009: The 'override' modifier can only be used in TypeScript files.
        /** @override */
        fooo (v) {}
    }
    